--- a/website/public/css/login.css
+++ b/website/public/css/login.css
@@ -61,3 +61,10 @@
   color: black;
   text-decoration: none;
 }
+
+.fe-errors {
+  text-align: center;
+  color: darkred;
+  padding-top: 1rem;
+  font-weight: 600;
+}
