--- a/website/views/login.ejs
+++ b/website/views/login.ejs
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="/css/tablet-index.css" />
     <link rel="stylesheet" href="/css/desktop-index.css" />
     <link rel="stylesheet" href="/css/desktop-login.css" />
+    <script src="/js/loginValidator.js"></script>
     <title>Soluciones Profesionales</title>
 </head>
 
@@ -23,7 +24,10 @@
     <%- include("partials/nav-bar") %>
 
       <main>
-
+        <div class="fe-errors form-errors">
+          <ul>
+          </ul>
+        </div>
         <% if(locals.errors !=undefined){ %>
           <h4 style="text-align: center;">Errores BackEnd</h4>
           <% for(let i=0; i<errors.length; i++){ %>
@@ -34,7 +38,8 @@
             </ul>
             <% } %>
               <% } %>
-                <form action="/login" method="POST" class="form-login">
+                <form action="/login" method="POST" class="form-login" id="form-login">
+
                   <div class="username">
                     <label for="email">Email:</label>
                     <input type="email" name="email" id="email">
