--- a/website/public/css/register.css
+++ b/website/public/css/register.css
@@ -1,5 +1,6 @@
 main {
   background-color: rgb(49, 71, 92);
+  padding-top: 1rem;
 }
 
 .clientForm {
@@ -8,7 +9,6 @@ main {
   padding: 10px;
   max-width: 600px;
   background-color: white;
-  margin-top: 20px;
   border-radius: 10px;
 }
 
