--- a/website/views/professionals/editProf.ejs
+++ b/website/views/professionals/editProf.ejs
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="/css/registerProf.css" />
         <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
-
+      <script src="/js/editProfValidator.js"></script>
         <title>Soluciones Profesionales</title>
 </head>
 
@@ -28,18 +28,19 @@
             <main>
                 <div class="all-registerProf">
                     <form action="/rubros/<%=profFound.client_id %>?_method=PUT" enctype="multipart/form-data"
-                        method="POST" class="prof-form">
+                        method="POST" class="prof-form" id="prof-form">
                         <!-- la ruta de "action", debe ser la ruta a la que tiene q ir la info del formulario -->
+
+                        <div class="fe-errors form-errors">
+                            <ul>
+                            </ul>
+                        </div>
+
 
                         <div class="form-errors">
 
-
-
-
-
-
                             <% if ( locals.errors !=undefined ) { %>
-                                <p>Uy, algo salio mal revisar:</p>
+                                <p>Uy, algo salio mal revisar(lado servidor):</p>
                                 <ul>
                                     <% for (let i=0; i < errors.length; i++) { %>
                                         <li>
@@ -65,13 +66,13 @@
                             </label>
                         </div>
                         <div class="registerInput">
-                            <label for="email">Email:
-                                <input type="email" name="email" id="email" value="<%=profFound.clients.email %>">
+                            <label for="email">Email Guardado: - <%=profFound.clients.email%> - De querer mantenerlo, dejar vacio:
+                                <input type="email" name="email" id="email" >
                             </label>
                         </div>
                         <div class="registerInput localidad-list">
                             <label>Localidad donde Reside
-                                <select name="city_Id">
+                                <select name="city_Id" id="city_Id">
                                     <!-- usar una API -->
                                     <option value="1" <%=(profFound.clients.city_Id=="1" ) ? "selected" : "" %>>Capital
                                         Federal
@@ -90,13 +91,13 @@
                         </div>
                         <div class="registerInput">
                             <label for="tel">Telefono:
-                                <input type="text" name="mobile" id="tel" value="<%=profFound.clients.mobile %>">
+                                <input type="text" name="mobile" id="mobile" value="<%=profFound.clients.mobile %>">
                             </label>
                         </div>
 
                         <div class="registerInput">
-                            <label for="cuit">DNI (Sin Puntos ni Espacios):
-                                <input type="cuit" name="cuit" id="cuit" value="<%=profFound.clients.dni %>" disabled>
+                            <label for="dni">DNI (Sin Puntos ni Espacios):
+                                <input type="dni" name="dni" id="dni" value="<%=profFound.clients.dni %>" disabled>
                             </label>
                         </div>
                         <div class="registerInput profesiones-list">
@@ -228,7 +229,7 @@
 
                         <div class="registerInput whyme">
                             <label for="whyme">Porque Deberian Elegirte?
-                                <textarea name="whyMe" id="whyme"><%=profFound.whyMe %></textarea>
+                                <textarea name="whyMe" id="whyMe"><%=profFound.whyMe %></textarea>
                             </label>
                         </div>
                         <div class="registerInput">
@@ -244,7 +245,7 @@
                         <div class="registerInput jobs">
                             <label for="jobs">Fotos de Trabajos Realizados (max 10)
                                 <!-- como subir mas de una foto?? -->
-                                <input type="file" name="workImages" accept=".jpg, .png, .bmp">
+                                <input type="file" name="workImages" id="workImages" accept=".jpg, .png, .jpeg, .gif">
                             </label>
                         </div>
                         <div class="registerInput">
@@ -265,6 +266,8 @@
             </main>
 
             <%- include("../partials/footer") %>
+
+            
 
 </body>
 
