Validacion DNI registerClient en backend y boton de cancelar editProf

--- a/website/views/professionals/editProf.ejs
+++ b/website/views/professionals/editProf.ejs
@@ -257,8 +257,12 @@
                         <div class="confirm-button">
                             <button type="submit">Confirmar</button>
                         </div>
+                      
                 </div>
                 </form>
+                <div class="confirm-button">
+                    <a href="/"><button>Cancelar</button></a>
+                </div>
                 </section>
 
                 <%- include("../partials/ad-bottom-body") %>
