--- a/website/views/users/editClient.ejs
+++ b/website/views/users/editClient.ejs
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="/css/desktop-index.css" />
         <title>Soluciones Profesionales</title>
 
-        <!-- <script src="/js/editClientValidator.js"></script> -->
+        <script src="/js/editClientValidator.js"></script>
 
 </head>
 
@@ -85,8 +85,8 @@
 
                     <div class="registerInput avatar">
                         <label for="avatar">Foto de Perfil (.jpg, .png, .jpeg ó .gif)
-                            <input src="images/clients/<%#=clientFound.avatar%>" type="file" name="avatar"
-                                id="avatarFile" accept=".jpg, .png, .jpeg, .gif" value="<%#=clientFound.avatar%>">
+                            <input src="images/clients/<%=clientFound.avatar%>" type="file" name="avatar"
+                                id="avatarFile" accept=".jpg, .png, .jpeg, .gif" value="<%=clientFound.avatar%>">
                         </label>
                     </div>
 
