--- a/website/views/users/editClient.ejs
+++ b/website/views/users/editClient.ejs
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="/css/desktop-index.css" />
         <title>Soluciones Profesionales</title>
 
-        <script src="/js/editClientValidator.js"></script>
+        <!-- <script src="/js/editClientValidator.js"></script> -->
 
 </head>
 
@@ -54,6 +54,7 @@
                                 value="<%=clientFound.lastName%>">
                         </label>
                     </div>
+
                     <div class="registerInput">
                         <label for="email">Email Guardado: - <%=clientFound.email%> - De querer mantenerlo, dejar vacio:
                                 <input type="email" name="email" id="email" value="">
