--- a/website/public/css/registerProf.css
+++ b/website/public/css/registerProf.css
@@ -61,6 +61,7 @@ main {
   /* box-shadow: 8px 8px 5px rgb(248, 212, 92); */
   width: 95%;
   padding: 10px;
+  max-width: 250px;
 }
 .confirm-button button:hover {
   box-shadow: 0px 0px 7px 3px rgb(248, 212, 92);
