--- a/website/views/partials/head-no-css.ejs
+++ b/website/views/partials/head-no-css.ejs
@@ -8,4 +8,5 @@
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;700&display=swap" rel="stylesheet">
 <!-- iconos -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+<link rel="icon" type="image/png" href="/images/favicon.png">
 <!-- estilos -->
