--- a/website/views/professionals/editProf.ejs
+++ b/website/views/professionals/editProf.ejs
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="/css/registerProf.css" />
         <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
-      <script src="/js/editProfValidator.js"></script>
+        <script src="/js/editProfValidator.js"></script>
         <title>Soluciones Profesionales</title>
 </head>
 
@@ -66,8 +66,9 @@
                             </label>
                         </div>
                         <div class="registerInput">
-                            <label for="email">Email Guardado: - <%=profFound.clients.email%> - De querer mantenerlo, dejar vacio:
-                                <input type="email" name="email" id="email" >
+                            <label for="email">Email Guardado: - <%=profFound.clients.email%> - De querer mantenerlo,
+                                    dejar vacio:
+                                    <input type="email" name="email" id="email">
                             </label>
                         </div>
                         <div class="registerInput localidad-list">
@@ -228,7 +229,7 @@
                         </div>
 
                         <div class="registerInput whyme">
-                            <label for="whyme">Porque Deberian Elegirte?
+                            <label for="whyme">Porque Deberian Elegirte? (max 500 caracteres)
                                 <textarea name="whyMe" id="whyMe"><%=profFound.whyMe %></textarea>
                             </label>
                         </div>
@@ -253,12 +254,12 @@
                                 <input type="file" name="workImages" id="workImages" accept=".jpg, .png, .jpeg, .gif">
                             </label>
                         </div>
-                       
+
 
                         <div class="confirm-button">
                             <button type="submit">Confirmar</button>
                         </div>
-                      
+
                 </div>
                 </form>
                 <div class="confirm-button">
@@ -272,7 +273,7 @@
 
             <%- include("../partials/footer") %>
 
-            
+
 
 </body>
 
