--- a/website/views/users/editClient.ejs
+++ b/website/views/users/editClient.ejs
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="/css/desktop-index.css" />
         <title>Soluciones Profesionales</title>
 
-        <script src="/js/editClientValidator.js"></script>
+        <!-- <script src="/js/editClientValidator.js"></script> -->
 
 </head>
 
