--- a/website/views/professionals/editProf.ejs
+++ b/website/views/professionals/editProf.ejs
@@ -249,7 +249,7 @@
                             </label>
                         </div>
                         <div class="registerInput jobs">
-                            <label for="jobs">Fotos de Trabajos Realizados (max 10)
+                            <label for="jobs">Foto de un Trabajo del cual estes orgulloso
                                 <!-- como subir mas de una foto?? -->
                                 <input type="file" name="workImages" id="workImages" accept=".jpg, .png, .jpeg, .gif">
                             </label>
