--- a/sol-prof-react/src/assets/css/app.css
+++ b/sol-prof-react/src/assets/css/app.css
@@ -8828,12 +8828,14 @@ a:focus {
 }
 .bg-gradient-primary {
   background-color: #4e73df;
+
   background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%);
   background-size: cover;
 }
 .bg-gradient-secondary {
   background-color: #858796;
-  background-image: linear-gradient(180deg, #858796 10%, #60616f 100%);
+  background-color: rgb(49, 71, 92);
+  /* background-image: linear-gradient(180deg, #858796 10%, #60616f 100%); */
   background-size: cover;
 }
 .bg-gradient-success {
