--- a/website/views/professionals/registerProf.ejs
+++ b/website/views/professionals/registerProf.ejs
@@ -17,7 +17,7 @@
 
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
-
+    <!-- listado licencia -->
     <!-- <script src="/js/professionalForm.js"></script> -->
     <title>Soluciones Profesionales</title>
 </head>
@@ -220,7 +220,7 @@
               </label>
             </div>
             <div class="registerInput jobs">
-              <label for="workImages">Fotos de Trabajos Realizados (max 10)
+              <label for="workImages">Foto de un Trabajo del cual estes orgulloso
                 <input type="file" name="workImages" id="workImages" accept=".jpg, .png, .bmp" multiple>
               </label>
             </div>
@@ -242,6 +242,7 @@
       <%- include("../partials/footer") %>
 
         <script src="/js/profValidator.js"></script>
+
 </body>
 
 </html>
