Fixed clientDetail, en lugar de indice, trae la Ciudad, Agregado Avatar a los users de Mokaroo

--- a/website/views/partials/header.ejs
+++ b/website/views/partials/header.ejs
@@ -3,7 +3,7 @@
         <a href="/"><img src="/images/logo-fondo-azul.svg" alt="logo sin fondo" /></a>
 
         <form class="search-bar" method="GET" action="/search">
-            <input type=" text" name="searchedItem" placeholder="Buscá la Profesion que Necesitas ">
+            <input type=" text" name="searchedItem" placeholder="Buscá por Zona, Profesion o Nombre de Profesional ">
             <button type="submit" class="search-button"><i class="fas fa-search"></i></button>
         </form>
 
