--- a/website/views/users/clientDetail.ejs
+++ b/website/views/users/clientDetail.ejs
@@ -74,7 +74,7 @@
                             <div class="details-info">
                                 <p>Ciudad: </p>
                                 <p>
-                                    <%=clientFound.city_Id%>
+                                    <%=clientFound.cities.province%>
                                 </p>
                             </div>
                             <div class="details-info">
@@ -105,23 +105,23 @@
                     <h3 class=" title-categories">Tambien te Puede Interesar</h3>
                     <section class="icon-categories">
                         <article class="icon-article">
-                            
+
                             <a href="../rubros/Mecanica">
-                              
+
                                 <i class="fas fa-wrench"></i>
                                 <p class="icon-txt">Mecanicos/as</p>
                             </a>
                         </article>
                         <article class="icon-article">
                             <a href="../rubros/Electricidad">
-                                
+
                                 <i class="fas fa-plug"></i>
                                 <p class="icon-txt">Electricistas</p>
                             </a>
                         </article>
                         <article class="icon-article">
                             <a href="../rubros/Odontologia">
-                                
+
                                 <i class="fas fa-tooth"></i>
                                 <p class="icon-txt">Odontologos/as</p>
                             </a>
@@ -129,7 +129,7 @@
 
                         <article class="icon-article">
                             <a href="../rubros/Plomeria">
-                               
+
                                 <i class="fas fa-faucet"></i>
                                 <p class="icon-txt">Plomeros/as</p>
                             </a>
@@ -137,7 +137,7 @@
 
                         <article class="icon-article">
                             <a href="../rubros/Carpinteria">
-                              
+
                                 <i class="fas fa-hammer"></i>
                                 <p class="icon-txt">Carpinteros/as/
                                     <p>
@@ -145,7 +145,7 @@
                         </article>
                         <article class="icon-article">
                             <a href="../rubros/Pintura">
-                             
+
                                 <i class="fas fa-paint-roller"></i>
                                 <p class="icon-txt">Pintores/as</p>
                             </a>
